# incognito-ai

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md  pyproject.toml
_bmad-output/planning-artifacts/: architecture.md  epics.md  hackathon-page.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
assets/: AppIcon.icns
packaging/: Info.plist  incognito.spec  rthook_hf.py
scripts/: build_macos.sh
src/incognito/: __main__.py  app.py  main.py  models.py
src/incognito/api/: events.py  routes.py
src/incognito/core/: config.py  exceptions.py  sessions.py  tempfiles.py
src/incognito/gliner/: loader.py
src/incognito/ollama/: manager.py
src/incognito/pipeline/: detect_ner.py  detect_regex.py  detector.py  extractor.py  keyfile.py  recovery.py  redactor.py  validator.py
src/incognito/static/: app.js  index.html  style.css
src/incognito/static/js/: mode-toggle.js  preview.js  recovery.js  sidebar.js
tests/: conftest.py  test_app.py  test_detect_ner.py  test_detect_regex.py  test_detections.py  test_detector.py  test_detector_v4.py  test_dismiss.py  test_download.py  test_extractor.py  test_gliner_loader.py  test_keyfile.py  test_keyfile_leakage.py  test_leakage.py  test_models.py  test_ollama_manager.py  test_pdf_preview.py  test_pdf_validation.py  test_pipeline_f1.py  test_recovery.py  test_redact_endpoint.py  test_redactor.py  test_sanitizer.py  test_setup_screen.py  test_sse.py  test_startup.py  test_upload.py  test_v3e_tuning.py  test_validator.py
tests/evaluation/corpus/: caf_notification_droits_pii.json  housing_allocation_decision_notice_pii.json  ssa_benefit_verification_pii.json  test-small_pii.json
